...
    case home, habits, sleep, profile

    var id: Int { rawValue }

    var title: String {
        switch self {
        case .home: return "Home"
        case .habits: return "Habits"
        case .sleep: return "Sleep"
        case .profile: return "Profile"
        }
    }

    var icon: String {
        switch self {
        case .home: return HLIcon.home
...
